# docs/swagger.yaml
@@ -7,6 +7,66 @@ definitions:
       message:
         type: string
     type: object
+  internal_feature_chats_transport_http.ChatDTOResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      participants:
+        items:
+          $ref: '#/definitions/internal_feature_chats_transport_http.ParticipantDTO'
+        type: array
+    type: object
+  internal_feature_chats_transport_http.CreateChatDTO:
+    properties:
+      participant_id:
+        type: integer
+    required:
+    - participant_id
+    type: object
+  internal_feature_chats_transport_http.ParticipantDTO:
+    properties:
+      user_id:
+        type: integer
+      username:
+        type: string
+    type: object
+  internal_feature_messages_transport_http.CreateMessageDTO:
+    properties:
+      content:
+        maxLength: 4000
+        minLength: 1
+        type: string
+    required:
+    - content
+    type: object
+  internal_feature_messages_transport_http.MessageDTOResponse:
+    properties:
+      chat_id:
+        type: integer
+      content:
+        type: string
+      id:
+        type: integer
+      sender_id:
+        type: integer
+      sent_at:
+        type: string
+    type: object
+  internal_feature_messages_transport_http.PatchMessageDTO:
+    properties:
+      content:
+        maxLength: 4000
+        minLength: 1
+        type: string
+      id:
+        minimum: 1
+        type: integer
+    required:
+    - content
+    - id
+    type: object
   internal_feature_users_transport_http.CreateUserDTO:
     properties:
       email:
@@ -75,10 +135,290 @@ definitions:
 host: 127.0.0.1:8080
 info:
   contact: {}
-  description: Todo Application REST-API scheme
+  description: Messenger REST-API scheme
   title: Golang Messenger API
   version: "1.0"
 paths:
+  /chats:
+    get:
+      description: Получить информацию об о всех своих чатах из системы чатов
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешно полученные чаты
+          schema:
+            $ref: '#/definitions/internal_feature_chats_transport_http.ChatDTOResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Получить чаты
+      tags:
+      - chats
+    post:
+      consumes:
+      - application/json
+      description: Создать чат с участием другого пользователя
+      parameters:
+      - description: CreateChat тело запроса
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_feature_chats_transport_http.CreateChatDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Успешно созданный чат
+          schema:
+            $ref: '#/definitions/internal_feature_chats_transport_http.ChatDTOResponse'
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Создать чат
+      tags:
+      - chats
+  /chats/{chat_id}:
+    delete:
+      description: Удаление чата по его ID в системе чатов
+      responses:
+        "204":
+          description: Успешно удалённый чат
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Удаление чата
+      tags:
+      - chats
+    get:
+      description: Получить информацию о своём чате из системы чатов
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешно полученный чат
+          schema:
+            $ref: '#/definitions/internal_feature_chats_transport_http.ChatDTOResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Получить чат
+      tags:
+      - chats
+  /chats/{chat_id}/messages:
+    delete:
+      description: Удаление сообщения по ID чата и ID сообщения
+      responses:
+        "204":
+          description: Успешное удаление сообщения в чате
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Удаление сообщения в чате
+      tags:
+      - messages
+    get:
+      description: Получить сообщения из чата по его ID
+      parameters:
+      - description: ID чата
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешно полученные сообщения
+          schema:
+            type: MessageDTOResponse
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Получить сообщения из чата
+      tags:
+      - messages
+    patch:
+      consumes:
+      - application/json
+      description: Изменить сообщение в чате по ID чата и ID сообщения
+      parameters:
+      - description: PatchMessage тело запроса
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_feature_messages_transport_http.PatchMessageDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешно изменённое сообщение
+          schema:
+            $ref: '#/definitions/internal_feature_messages_transport_http.MessageDTOResponse'
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Изменить сообщение
+      tags:
+      - messages
+    post:
+      consumes:
+      - application/json
+      description: Создать новое сообщение в чате по ID чата
+      parameters:
+      - description: CreateMessage тело запроса
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_feature_messages_transport_http.CreateMessageDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Успешно созданное сообщение
+          schema:
+            $ref: '#/definitions/internal_feature_messages_transport_http.MessageDTOResponse'
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/github_com_simonkefir_golang-messenger_internal_core_transport_http_response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Отправить сообщение
+      tags:
+      - messages
   /users/{id}:
     get:
       consumes:
@@ -149,8 +489,6 @@ paths:
   /users/me:
     delete:
       description: Удаление себя в системе пользователей
-      produces:
-      - application/json
       responses:
         "204":
           description: Успешное удаление
