# internal/feature/chats/transport/http/get_chat.go
@@ -10,6 +10,18 @@ import (
 	core_http_response "github.com/simonkefir/golang-messenger/internal/core/transport/http/response"
 )
 
+// GetChat      godoc
+// @Summary     Получить чат
+// @Description Получить информацию о своём чате из системы чатов
+// @Tags        chats
+// @Produce     json
+// @Security    BearerAuth
+// @Success     200 {object} ChatListItemDTO                  "Успешно полученный чат"
+// @Failure     401 {object} core_http_response.ErrorResponse "Unauthorized"
+// @Failure     403 {object} core_http_response.ErrorResponse "Forbidden"
+// @Failure     404 {object} core_http_response.ErrorResponse "Not found"
+// @Failure     500 {object} core_http_response.ErrorResponse "Internal server error"
+// @Router      /chats/{chat_id}                              [get]
 func (h *ChatsHTTPHandler) GetChat(w http.ResponseWriter, r *http.Request) {
 	log := core_logger.FromContext(r.Context())
 	responseHandler := core_http_response.NewHTTPResponseHandler(log, w)
