# internal/feature/messages/transport/http/delete_message.go
@@ -13,6 +13,18 @@ import (
 	core_http_response "github.com/simonkefir/golang-messenger/internal/core/transport/http/response"
 )
 
+// DeleteMessage godoc
+// @Summary      Удаление сообщения в чате
+// @Description  Удаление сообщения по ID чата и ID сообщения
+// @Tags         messages
+// @Security     BearerAuth
+// @Success      204                                               "Успешное удаление сообщения в чате"
+// @Failure      400 {object} core_http_response.ErrorResponse     "Invalid input"
+// @Failure      401 {object} core_http_response.ErrorResponse     "Unauthorized"
+// @Failure      403 {object} core_http_response.ErrorResponse     "Forbidden"
+// @Failure      404 {object} core_http_response.ErrorResponse     "Not found"
+// @Failure      500 {object} core_http_response.ErrorResponse     "Internal server error"
+// @Router       /chats/{chat_id}/messages                         [delete]
 func (h *MessagesHTTPHandler) DeleteMessage(w http.ResponseWriter, r *http.Request) {
 	log := core_logger.FromContext(r.Context())
 	responseHandler := core_http_response.NewHTTPResponseHandler(log, w)
