# internal/feature/messages/transport/http/get_messages.go
@@ -10,6 +10,20 @@ import (
 	core_http_response "github.com/simonkefir/golang-messenger/internal/core/transport/http/response"
 )
 
+// GetUser      godoc
+// @Summary     Получить сообщения из чата
+// @Description Получить сообщения из чата по его ID
+// @Tags        messages
+// @Produce     json
+// @Param       id    path   int      true                    "ID чата"
+// @Security    BearerAuth
+// @Success     200 MessageDTOResponse                        "Успешно полученные сообщения"
+// @Failure     400 {object} core_http_response.ErrorResponse "Invalid input"
+// @Failure     401 {object} core_http_response.ErrorResponse "Unauthorized"
+// @Failure     403 {object} core_http_response.ErrorResponse "Forbidden"
+// @Failure     404 {object} core_http_response.ErrorResponse "Not found"
+// @Failure     500 {object} core_http_response.ErrorResponse "Internal server error"
+// @Router      /chats/{chat_id}/messages                     [get]
 func (h *MessagesHTTPHandler) GetMessages(w http.ResponseWriter, r *http.Request) {
 	log := core_logger.FromContext(r.Context())
 	responseHandler := core_http_response.NewHTTPResponseHandler(log, w)
