# internal/feature/users/transport/http/delete_me.go
@@ -12,14 +12,13 @@ import (
 // DeleteMe     godoc
 // @Summary     Удаление своего пользователя
 // @Description Удаление себя в системе пользователей
-// @Produce     json
 // @Tags        users
 // @Security    BearerAuth
-// @Success     204                                           "Успешное удаление"
-// @Failure     400 {object} core_http_response.ErrorResponse "Invalid input"
-// @Failure     401 {object} core_http_response.ErrorResponse "Unauthorized"
-// @Failure     404 {object} core_http_response.ErrorResponse "Not found"
-// @Failure     500 {object} core_http_response.ErrorResponse "Internal server error"
+// @Success     204                                               "Успешное удаление"
+// @Failure     400 {object} core_http_response.ErrorResponse     "Invalid input"
+// @Failure     401 {object} core_http_response.ErrorResponse     "Unauthorized"
+// @Failure     404 {object} core_http_response.ErrorResponse     "Not found"
+// @Failure     500 {object} core_http_response.ErrorResponse     "Internal server error"
 // @Router      /users/me [delete]
 func (h *UsersHTTPHandler) DeleteMe(w http.ResponseWriter, r *http.Request) {
 	log := core_logger.FromContext(r.Context())
